compiler/src/test/resources/golden/errors/ct_panic.dawn
const BAD: Int = comptime { panic("nope") }
