compiler/src/test/resources/golden/errors/ct_panic.err
error: comptime: panicked: nope
  --> ct_panic.dawn:1:29
  |
1 | const BAD: Int = comptime { panic("nope") }
  |                             ^^^^^^^^^^^^^
